feat: create read write with sincro